--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,7 +1,6 @@
 /* Variables
 -----------------------------------------------------------------
 */
-
 :root {
     --font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', roboto, oxygen,
     ubuntu, cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -43,3 +42,7 @@
     color: var(--vp-c-accent-text);
     background: var(--vp-c-accent);
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
