--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,48 +1,19 @@
-/* Variables
------------------------------------------------------------------
-*/
-:root {
-    --font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', roboto, oxygen,
-    ubuntu, cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+@import './variables.scss';
 
-    --vp-c-accent: rgb(248, 43, 125);
-    --vp-c-accent-hover: #8C034E;
-    --vp-c-accent-text: var(--vp-c-white);
-
-    --vp-c-text: rgb(24, 39, 47);
-    --vp-c-text-mute: rgb(24 39 47 / 78%);
-    --vp-c-text-subtle: rgb(24 39 47 / 56%);
-
-    --sta-border-radius: 0.5rem;
-}
-
-[data-theme="dark"] {
-    --vp-c-accent: #9e1c63;
-    --vp-c-accent-hover: rgb(87, 87, 123);
-    --vp-c-accent-text: rgb(236, 236, 236);
-
-    // background colors
-    --vp-c-bg: #383838;
-    --vp-c-bg-alt: #202020;
-    --vp-c-bg-elv: #000;
-
-    --vp-c-text: rgb(192, 190, 190);
-    --vp-c-text-mute: rgb(192 190 190 / 78%);
-    --vp-c-text-subtle: rgb(192 190 190 / 56%);
-
-    --vp-c-border: rgb(103, 99, 111);
-}
-
+// change text selection in browser
 ::-moz-selection {
     color: var(--vp-c-accent-text);
     background: var(--vp-c-accent);
 }
-  
 ::selection {
     color: var(--vp-c-accent-text);
     background: var(--vp-c-accent);
 }
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+[v-cloak] {
+    display: none;
+}
+
+@import './images.scss';
+@import './home.scss';
+
